--- a/ImageLab09/index.html
+++ b/ImageLab09/index.html
@@ -6,13 +6,36 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-box position="-2.3 1.5 -4.85" rotation="20 30 20" color="red"></a-box>
+      <a-box position="-2.3 1.5 -4.85" rotation="20 30 20" height="0.25" width="1.1" depth="1.1" color="white"></a-box>
+      <a-box position="-2.3 1.5 -4.85" rotation="20 30 20" height="1.1" width=".25" depth="1.1" color="white"></a-box>
+
+      <a-sphere position="0 1.25 -5" radius="1.25" color="white"></a-sphere>
+      <a-sphere position="0 2.75 -5" radius="1" color="white"></a-sphere>
+      <a-sphere position="0 4 -5" radius="0.75" color="white"></a-sphere>
+
+      <a-sphere position="0.25 4.15 -4.3" radius="0.10" color="black"></a-sphere>
+      <a-sphere position="-0.25 4.15 -4.3" radius="0.10" color="black"></a-sphere>
+
+      <a-cone position="0 4.0 -4.2" rotation="90 0 0" radius-top="0.0" radius-bottom=".10" height=".25" color="orange"></a-cone>
+
+      <a-sphere position="0 3.7 -4.3" radius="0.05" color="black"></a-sphere>
+      <a-sphere position="0.12 3.73 -4.32" radius="0.05" color="black"></a-sphere>
+      <a-sphere position="-0.12 3.73 -4.32" radius="0.05" color="black"></a-sphere>
+      <a-sphere position="0.24 3.8 -4.34" radius="0.05" color="black"></a-sphere>
+      <a-sphere position="-0.24 3.8 -4.34" radius="0.05" color="black"></a-sphere>
+
+      <a-cylinder position="0 5 -5" radius="0.5" height="1.5" color="black"></a-cylinder>
+      <a-cylinder position="0 4.5 -5" radius="0.8" height="0.15" color="black"></a-cylinder>
+
+      <a-box position="1.5 2.5 -5" rotation="0 0 45" height="2" width="0.2" depth="0.2" color="brown"></a-box>
+      <a-box position="-1.5 2.5 -5" rotation="0 0 -45" height="2" width="0.2" depth="0.2" color="brown"></a-box>
+
+
       <a-plane position="0 0.1 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <!-- <a-sky color="#ECECEC"></a-sky> -->
       <!-- the enviroment entity includes a sky. Choose from the presets"none, default, contact, egypt, checkerboard, forest, goaland, yavapai, goldmine, threetowers, poison, arches, tron, japan, dream, volcano, starry, osiris, moon" -->
-      <a-entity environment="preset: forest; dressingAmount: 500"></a-entity>
+      <a-entity environment="preset: japan; dressingAmount: 500"></a-entity>
     </a-scene>
   </body>
-</html>
+</html> 
