--- a/ImageLab10/index.html
+++ b/ImageLab10/index.html
@@ -2,14 +2,20 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/gh/n5ro/aframe-extras@v6.1.1/dist/aframe-extras.loaders.min.js"></script>
   </head>
   <body>
+    <a-assets>
+      <a-asset-item id="SandCastle" src="SandCastle.glb"></a-asset-item>
+    </a-assets>
+
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sphere position="0 1.05 -8" radius="1.25" src="BeachBallTexture.png"></a-sphere>
+      <a-cone position="1.5 0.55 -3.5" radius-bottom="0.5" height="1.5" rotation="180 35 35" src="ConeTexture.jpeg"></a-cone>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" src="SandTexture.jpg"></a-plane>
+      <a-sphere position="2 1.45 -3.8" radius=".65" src="IceCreamTexture.jpg"></a-sphere>
+      <a-sky src="BeachSky.jpg""></a-sky>
+      <a-entity gltf-model="#SandCastle" position="-2 0 -3.4" scale="3 3 3" rotation="0 45 0"></a-entity>
     </a-scene>
   </body>
 </html>
